# hpp-tools

./: CMakeLists.txt  README.md  package.xml
blender/: README.md  bounding_box.py  simplify_mesh.py
etc/: bashrc
etc/bash/: aliases.sh  completion.sh  functions.sh
etc/highlight/: log.lang
gdb/: CMakeLists.txt  gdbinit.in
gdb/printers/: stl_container_printers
gdb/py/: eigen.py  hpp_gepetto_viewer.py
gdb/script/: eigen_malloc_backtrace_parse.awk  find_malloc_in_eigen.gdb
hpp/wholebody/: __init__.py  walkgen_plot.py
install/: README  hppcd-defaults
src/hpp/: parse_log.py
