<?xml version='1.0'?>
 <package format='2'>
 <name>hpp-tools</name>
 <version>0.0.0</version>
 <description>Tools for the HPP project. </description>

 <maintainer email='hpp@laas.fr'>Joseph Mirabel</maintainer>
 <license>LGPL</license>

 <!-- <url type='website'>http://github.com/humanoid-path-planner/hpp-tools </url> -->

 <author>Joseph Mirabel</author>
 <author>Florent Lamiraux et al.</author>

 <buildtool_depend>catkin</buildtool_depend>
 </package>
